--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 docs.json
 __dummy.html
 docs/
-/jwt_crack
-jwt_crack.so
-jwt_crack.dylib
-jwt_crack.dll
-jwt_crack.a
-jwt_crack.lib
-jwt_crack-test-*
+/jwt_cracker
+jwt_cracker.so
+jwt_cracker.dylib
+jwt_cracker.dll
+jwt_cracker.a
+jwt_cracker.lib
+jwt_cracker-test-*
 *.exe
 *.pdb
 *.o
